WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71863
REGRESSION (
r99613
): Incomplete painting of the root element background in flipped blocks writing mode
https://bugs.webkit.org/show_bug.cgi?id=71863
Summary
REGRESSION (r99613): Incomplete painting of the root element background in fl...
Ojan Vafai
Reported
2011-11-08 15:30:39 PST
http://trac.webkit.org/changeset/99613
caused 5 image failures on the chromium bots. This is failing on the Chromium CG bot as well, so it might be failing for the Apple mac port as well: fast/block/positioning/vertical-rl/001.html These is not failing on the Chromium CG bot, so it's likely a Skia bug: fast/multicol/vertical-rl/float-avoidance.html fast/multicol/vertical-rl/float-paginate-complex.html fast/multicol/vertical-rl/column-break-with-balancing.html fast/multicol/vertical-rl/column-rules.html
Attachments
Patch
(3.01 KB, patch)
2011-11-08 16:21 PST
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-11-08 16:02:06 PST
Testing a fix now.
mitz
Comment 2
2011-11-08 16:21:34 PST
Created
attachment 114171
[details]
Patch
mitz
Comment 3
2011-11-08 16:26:54 PST
Fixed in <
http://trac.webkit.org/r99630
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug