REGRESSION (r99613): Incomplete painting of the root element background in flipped blocks writing mode https://bugs.webkit.org/show_bug.cgi?id=71863

Reviewed by Anders Carlsson.

* rendering/RenderBox.cpp:
(WebCore::RenderBox::paintRootBoxFillLayers): Instead of unconditionally flipping the background
rect here...
* rendering/RenderView.cpp:
(WebCore::RenderView::backgroundRect): ...flip it only in column mode here.
* rendering/RenderView.h:



Canonical link: https://commits.webkit.org/88197@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99630 268f45cc-cd09-0410-ab3c-d52691b4dbfc